Fix some sonarqube violations.